@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-30T08:10:52Z",
+  "timestamp" : "2023-07-31T00:53:18Z",
   "count_outdated" : 52,
   "uniques_outdated" : 39,
-  "count" : 55,
-  "uniques" : 41,
+  "count" : 56,
+  "uniques" : 42,
   "clones" : [
     {
       "timestamp": "2023-07-19T00:00:00Z",
@@ -19,6 +19,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
